# wubi-practice

./: .gitignore  .hgignore  CMakeLists.txt  README  testtype.cc  testtype.hh  wubi.cc  wubi.hh
doc/: rules.txt
